add login screen ui
Signed-off-by: Parth Takkar <parthtakkar@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="invalid_shop_code">Shop Code must be >3 characters</string>
     <string name="app_shared_preferences">APP_SHARED_PREFERENCES</string>
     <string name="prefs_key_token">token</string>
+    <string name="username">Username</string>
+    <string name="login">Login</string>
+    <string name="enter_code">Enter Code</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="password">Password</string>
+    <string name="login_heading">Hello, hope you\'re good!</string>
+    <string name="code">Code</string>
 </resources>
